compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__tuple_index_out_of_bounds.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 695
expression: "#(0, 1).2"

---
error: Out of bounds tuple index
  ┌─ /src/one/two.gleam:1:8
  │
1 │ #(0, 1).2
  │        ^^ This index is too large

The index being accessed for this tuple is 2, but this tuple has 2 elements
so the highest valid index is 1.

